--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <div class="card">
         <div class="card-header">
           <h2>Generate a Password</h2>
+          <label for="length">Password Length:</label>
+          <input type="number" id="length" min="8" max="128" value="25"><br><br>
         </div>
         <div class="card-body">
           <textarea
@@ -26,6 +28,7 @@
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
+
         </div>
       </div>
     </div>
