added inputs and labels for Uppercase letters, numbers, and symbols

--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
       </header>
       <div class="card">
         <div class="card-header">
-          <h2>Password Customization</h2>
+          <h2>Password Customization</h2><br>
           <label for="length">Password Length:</label>
           <input type="number" id="length" min="8" max="128" value="25"><br><br>
 
+          <label for="uppercase">Include Uppercase Letters:</label>
+          <input type="checkbox" id="uppercase" checked><br><br>
+
+          <label for="numbers">Include Numbers</label>
+          <input type="checkbox" id="numbers" checked><br><br>
+
+          <label for="symbols">Include Symbols</label>
+          <input type="checkbox" id="symbols" checked><br><br>
           
         </div>
         <div class="card-body">
