--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
           <label for="symbols">Include Symbols</label>
           <input type="checkbox" id="symbols" checked><br><br>
-          
+
         </div>
         <div class="card-body">
           <textarea
@@ -37,7 +37,9 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+          <button id="#generate" class="btn">Generate Password</button>
+          <input type="#password" id="uppercase, numbers, symbols">
+
 
         </div>
       </div>
