--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="#generate" class="btn">Generate Password</button>
-          <input type="#password" id="uppercase, numbers, symbols">
+          <button id="generate" class="btn">Generate Password</button>
+          <input type="password" id="uppercase, numbers, symbols">
 
 
         </div>
