--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
-          <!-- <input type="password" id="uppercase, numbers, symbols"><br> -->
+          <input type="passwordInput" id="length, uppercase, numbers, symbols"><br>
 
 
         </div>
